# CS330_Final_Project

./: .gitignore  CyclicSchedulerAlgorithm.py  README.md  data.json  display.py  edf.py  flow.py  ilp copy.py  ilp.py  pyproject.toml  run_test.py  schedule.py  scheduleralgorithm.py  sig.py  taskset.py  visualization.py
data_generation/: generate_data.py  uuifast.py
example_output/: IlpScheduler_0.15_10_results.json  IlpScheduler_0.15_12_results.json  IlpScheduler_0.15_14_results.json  IlpScheduler_0.15_15_results.json  IlpScheduler_0.15_16_results.json  IlpScheduler_0.15_18_results.json  IlpScheduler_0.15_20_results.json  IlpScheduler_0.15_25_results.json  IlpScheduler_0.15_30_results.json  IlpScheduler_0.15_40_results.json  IlpScheduler_0.15_4_results.json  IlpScheduler_0.15_50_results.json  IlpScheduler_0.15_5_results.json  IlpScheduler_0.15_60_results.json  IlpScheduler_0.15_6_results.json  IlpScheduler_0.15_8_results.json  IlpScheduler_0.1_10_results.json  IlpScheduler_0.1_12_results.json  IlpScheduler_0.1_14_results.json  IlpScheduler_0.1_15_results.json  IlpScheduler_0.1_16_results.json  IlpScheduler_0.1_18_results.json  IlpScheduler_0.1_20_results.json  IlpScheduler_0.1_25_results.json  IlpScheduler_0.1_30_results.json  IlpScheduler_0.1_40_results.json  IlpScheduler_0.1_4_results.json  IlpScheduler_0.1_50_results.json  IlpScheduler_0.1_5_results.json  IlpScheduler_0.1_60_results.json  IlpScheduler_0.1_6_results.json  IlpScheduler_0.1_8_results.json  IlpScheduler_0.25_10_results.json  IlpScheduler_0.25_12_results.json  IlpScheduler_0.25_14_results.json  (+541 more)
(+20295 files in other folders)
