[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["zlxlty <lus2@carleton.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gurobipy = "^12.0.1"
pygame = "^2.6.1"
networkx = "^3.4.2"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
